fixed image cropper (UniBE, #74)
* fixed image cropper
* call cropper.clear
* add toggle to cropper btn

--- a/Products/zms/plugins/www/jquery/cropper/cropper.css
+++ b/Products/zms/plugins/www/jquery/cropper/cropper.css
@@ -1,14 +1,14 @@
 /*!
- * Cropper.js v1.5.11
+ * Cropper.js v1.5.12
  * https://fengyuanchen.github.io/cropperjs
  *
  * Copyright 2015-present Chen Fengyuan
  * Released under the MIT license
  *
- * Date: 2021-02-17T11:53:21.992Z
+ * Date: 2021-06-12T08:00:11.623Z
  */
 
-.cropper-container {
+ .cropper-container {
   direction: ltr;
   font-size: 0;
   line-height: 0;
@@ -273,9 +273,11 @@
   opacity: 0;
 }
 
+/*
 .cropper-bg {
-  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAAA3NCSVQICAjb4U/gAAAABlBMVEXMzMz////TjRV2AAAACXBIWXMAAArrAAAK6wGCiw1aAAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M26LyyjAAAABFJREFUCJlj+M/AgBVhF/0PAH6/D/HkDxOGAAAAAElFTkSuQmCC');
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAAA3NCSVQICAjb4U/gAAAABlBMVEXMzMz////TjRV2AAAACXBIWXMAAArrAAAK6wGCiw1aAAAAHHRFWHRTb2Z0d2FyZQBBZG9iZSBGaXJld29ya3MgQ1M26LyyjAAAABFJREFUCJlj+M/AgBVhF/0PAH6/D/HkDxOGAAAAAElFTkSuQmCC");
 }
+*/
 
 .cropper-hide {
   display: block;
